<resources>
    <!-- Application -->
    <string name="app_name">MyArdina</string>
    <string name="facebook_app_id">1647878202208728</string>

    <!-- Login/Register -->
    <string name="prompt_email">Email</string>
    <string name="prompt_email_confirm">Confirm Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_email_mismatch">The email does not match the original</string>
    <string name="error_password_mismatch">The password does not match the original</string>

    <!-- Symptoms -->
    <string name="symptoms">Symptoms</string>

<<<<<<< HEAD
    <string name="action_settings">Settings</string>
    <string name="go_to_fb_login">Login with Facebook!</string>
    <string name="go_to_maps_activity">View Map to Find a Game!</string>
    <string name="title_activity_login_to_facebook">Profile</string>
    <string name="user_name">Welcome, </string>
    <string name="sign_in_with_facebook_header">Sign in with Facebook!</string>
    <string name="main_activity_header">Welcome to the Beast!</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_home_screen">HomeScreen</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_home">Current Games</string>
    <string name="title_activity_tab_fragment">TabFragment</string>

    <string name="title_activity_maps">Map</string>
    <string name="about">About…</string>
    <string name="get_location">Get Current Location</string>
    <string name="show_location">Show Current Location</string>
    <string name="about_app">About Where Am I?</string>
    <string name="close">Close</string>
    <string name="code_credit">© 2014 Adam C. Champion</string>
    <string name="prefs">Prefs</string>
    <string name="eula_accepted_key">eula_accepted</string>
    <string name="eula"><p>By using this app, you agree to abide by the <a href="https://developers.google.com/maps/terms">Google Maps Terms of Service</a> and <a href="https://www.google.com/intl/en/policies/terms/">Google\'s Terms of Service</a>.</p><p><strong>Privacy Policy:</strong> Upon request, this app uses your location in order to show it via Google Maps. Internet access permission is necessary for this purpose. No other information is collected, stored, or transmitted.</p></string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="google_play_text_key">google_play_text</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_create_game">Create Game</string>
    <string name="title_activity_game_detail">Game Details</string>

    <string name="sport_spinner_title">Sport</string>
    <string-array name="sport_entries">
        <item>Basketball</item>
        <item>Football</item>
        <item>Soccer</item>
        <item>Volleyball</item>
    </string-array>
    <string name="place_picker_title">Address of location</string>
    <string name="additional_info_title">Additional location info (optional)</string>
    <string name="time_picker_title">Time</string>
    <string name="button_text">EDIT</string>
    <string name="team_size_picker_title">Team size</string>
    <string name="create_button_text">CREATE</string>
    <string name="title_activity_map_viewer">MapViewerActivity</string>

    <string name="info_label">Additional Info: </string>
    <string name="location_label">Location: </string>
    <string name="sport_label">Sport: </string>
    <string name="team_size_label">Team Size: </string>
    <string name="time_label">Time: </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_view_game">ViewGameActivity</string>

    <string name="total_games_played">Total games played</string>
    <string name="overall_record">Overall record</string>
    <string name="games_played">Games played: </string>
    <string name="record">Record: </string>
    <string name="goals">Goals: </string>
    <string name="assists">Assists: </string>
    <string name="points">Points: </string>
    <string name="touchdowns">Touchdowns: </string>
    <string name="interceptions">Interceptions: </string>
    <string name="aces">Aces: </string>


    <string name="male">Male</string>
    <string name="ventral">Front</string>
    <string name="dorsal">Back</string>
    <string name="male_ventral">male body frontal view"</string>
    <string name="female">Female</string>

=======
    <!-- Application -->
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_symptoms">SymptomsActivity</string>
>>>>>>> 389620918450483ab04649f0b4643b9e2fc1ea75
</resources>
